# Pong-Multi

pong-multi-client/: Cargo.toml
pong-multi-client/src/: main.rs
pong-multi-client/src/game/player/: mod.rs  system.rs
pong-multi-client/src/game/world/: mod.rs  system.rs
pong-multi-client/src/user_interface/welcome/: components.rs  mod.rs  system.rs
pong-multi-server/: Cargo.toml
pong-multi-server/src/: main.rs
pong-multi-server/src/network/: match_maker.rs  mod.rs  player.rs  room.rs  server.rs
