[package]
name = "pong-multi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.13.1", features = [ "v4", "fast-rng", "macro-diagnostics", ] }
rapier2d = { version = "0.23.0", features = [ "simd-stable" ] }
serde_json = "1.0.138"
